# inteleld

./: README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
api/: const.py  models.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_user_access.py  0002_alter_user_role.py  0003_alter_driver_notes.py  0003_alter_user_company.py  0003_alter_user_role.py
api/view/: companies.py  drivers.py  logs.py  trucks.py  users.py
backend/: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_access_companies_alter_access_drivers_and_more.py  0002_alter_log_status.py  0004_driver_allow_pc_driver_allow_ym.py  0005_remove_log_lat_remove_log_lng_location_is_active_and_more.py  0006_rename_adress_location_address.py
backend/api/view/: companies.py  drivers.py  logs.py  trucks.py  users.py
backend/core/: settings.py
backend/public/: index.html
backend/scripts/: setup.sh
core/: settings.py  urls.py
core/settings/: common.py  dev.py
frontend/: Dockerfile  Dockerfile.prod  docker-compose.yml  package-lock.json  package.json  vite.config.ts
frontend/src/: index.ts  util.ts
frontend/src/components/: Home.tsx  Login.tsx
frontend/src/components/DriverLogs/: LogForm.tsx  (+3 more)
frontend/src/hooks/: useEntities.ts  useEntity.ts
frontend/src/routing/: routes.tsx
frontend/src/services/: api-client.ts
scripts/: setup.sh
(+7 files in other folders)
